--- a/gb/20/3/20/n11957796.md
+++ b/gb/20/3/20/n11957796.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qpntud264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qpntud264/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qpntud264/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qpntud264/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>李正宽：肺炎病毒的传播路线揭示：天灭中共</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/2001010121131501-600x400.jpg" />
 <h6>天灭中共。（余钢／大纪元）
 </h6>
 <hr>
 	<p>【大纪元2020年03月20日讯】中共病毒在武汉爆发后（俗称武汉肺炎、新冠状病毒）迅速在中国大陆扩散，并在短时间内蔓延到世界100多个国家和地区。</p>
-<p>人们常说：劫难无情，瘟疫有眼。看一看<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>疫情在国际上的蔓延趋势（见图一），就不难发现，这次瘟疫很明显是冲着共产党而来的。</p>
+<p>人们常说：劫难无情，瘟疫有眼。看一看<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>疫情在国际上的蔓延趋势（见图一），就不难发现，这次瘟疫很明显是冲着共产党而来的。</p>
 <p style="text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/0fc6bfbbdbceb39fb6d33adc86301a05.png"><img class="aligncenter wp-image-11957803 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/0fc6bfbbdbceb39fb6d33adc86301a05-450x315.png" alt="" width="450" b="315" /></a></p>
-<p style="text-align: center;">图一：截止2020年3月18日，维基百科公布的数据清晰地显示：<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>疫情在国际上沿着“<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E4%BA%B2%E5%85%B1%E8%B7%AF%E7%BA%BF.md#1">亲共路线</a>”传播。</p>
-<p>截至3月18日，中国之外中共肺炎疫情累计确诊病例人数最多的六个国家分别是：<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E6%84%8F%E5%A4%A7%E5%88%A9.md#1">意大利</a>、伊朗、西班牙、德国、法国和韩国。而这些国家都是跟中共走的非常近的国家。</p>
-<p>首先看<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E6%84%8F%E5%A4%A7%E5%88%A9.md#1">意大利</a>。作为G7世界七大工业国之一，意大利不顾西方盟友的反对，于2019年3月与中共签约，并成为欧洲首个签署中共“<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E4%B8%80%E5%B8%A6%E4%B8%80%E8%B7%AF.md#1">一带一路</a>”协议的国家。2019年，由于大陆游客的激增，罗马街头竟然出现了中共警察。</p>
-<p>而伊朗呢，则是国际公认的中共小兄弟，它的军火、导弹、核武、电子产品等由中共输入。在“<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E4%B8%80%E5%B8%A6%E4%B8%80%E8%B7%AF.md#1">一带一路</a>”计划中，伊朗是中共渗透欧亚非的战略枢纽。过去10年中，中共一直是伊朗最大的贸易伙伴。</p>
+<p style="text-align: center;">图一：截止2020年3月18日，维基百科公布的数据清晰地显示：<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>疫情在国际上沿着“<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BA%B2%E5%85%B1%E8%B7%AF%E7%BA%BF.md#1">亲共路线</a>”传播。</p>
+<p>截至3月18日，中国之外中共肺炎疫情累计确诊病例人数最多的六个国家分别是：<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%84%8F%E5%A4%A7%E5%88%A9.md#1">意大利</a>、伊朗、西班牙、德国、法国和韩国。而这些国家都是跟中共走的非常近的国家。</p>
+<p>首先看<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%84%8F%E5%A4%A7%E5%88%A9.md#1">意大利</a>。作为G7世界七大工业国之一，意大利不顾西方盟友的反对，于2019年3月与中共签约，并成为欧洲首个签署中共“<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%B8%80%E5%B8%A6%E4%B8%80%E8%B7%AF.md#1">一带一路</a>”协议的国家。2019年，由于大陆游客的激增，罗马街头竟然出现了中共警察。</p>
+<p>而伊朗呢，则是国际公认的中共小兄弟，它的军火、导弹、核武、电子产品等由中共输入。在“<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%B8%80%E5%B8%A6%E4%B8%80%E8%B7%AF.md#1">一带一路</a>”计划中，伊朗是中共渗透欧亚非的战略枢纽。过去10年中，中共一直是伊朗最大的贸易伙伴。</p>
 <p>中共在六四屠城之后，西班牙是在第一个派外交大臣访问北京的欧盟国家。2017年，西班牙首相出席中共的“一带一路”国际合作高峰论坛。2019年6月，西班牙沃达丰（Vodafone）正式启动了该国的首个5G商用移动网络，并采用华为作为核心设备供应商。2019年1月，在中共党魁访问西班牙之后，马德里王室剧院在中共的施压下，强制性取消了即将在该剧院上演的弘扬中华传统文化的神韵演出。</p>
 <p>再来看看疫情比较严重的欧洲两大强国，德国和法国。近年来两国政府都很亲共，并且无视美国的郑重警告，最近双双决定允许华为参与本国5G网络建设。2019年3月26日，德国总理在巴黎记者会上，大赞“一带一路”是“非常重要的计划”、“我们欧洲人想要参与”。而法国总统在2017年3月3日接受《巴黎人报》采访时，自称是“毛泽东主义者”。</p>
 <p>再来看看亚洲地区除中国外疫情最严重的韩国。近年来，韩国政府大幅向中共靠近。甚至在大陆疫情被曝光后，韩国政府担心会损害与中共的关系，坚持不在边境设限，也不对旅客进行检疫。在过去10几年中，因为中共的淫威和渗透，韩国的首尔、大邱等城市多次拒绝了神韵艺术团的演出。</p>
 <p>与以上亲共国家形成鲜明对比的是香港、俄罗斯、印度、和台湾。这些国家和地区虽然是中国的近邻，但因其都选择了拒绝中共或不相信中共，所以基本上都成功抵御了中共病毒。</p>
 <p><ahref="https://i.epochtimes.com/assets/uploads/2020/03/290aa90f3709fc1485152fed4b739cf4.png"><img class="aligncenter wp-image-11957807 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/290aa90f3709fc1485152fed4b739cf4-450x135.png" alt="" width="450" b="135" /></a></p>
-<p>图二：邻近大陆的香港和台湾，都因为拒绝了中共而成功抵御了中共病毒。左图：香港民众在“反送中”游行中高举“<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E5%A4%A9%E7%81%AD%E4%B8%AD%E5%85%B1.md#1">天灭中共</a>”的避邪符；右图：台湾大选前夕，民众驱逐中共操控的红色媒体。</p>
-<p>提起香港，很多人马上会想到2019年的“反送中”运动。尽管香港每天有近10万的大陆人入境，而且港府一直不全面封关，香港人却因为坚持在“反送中”运动中高举“<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E5%A4%A9%E7%81%AD%E4%B8%AD%E5%85%B1.md#1">天灭中共</a>”的辟邪符而得到平安。截止3月18日，香港确诊的100多例中共病毒感染者中，大多是从大陆来的人，香港本地人中多是倾向支持中共的人士被感染。</p>
+<p>图二：邻近大陆的香港和台湾，都因为拒绝了中共而成功抵御了中共病毒。左图：香港民众在“反送中”游行中高举“<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%A4%A9%E7%81%AD%E4%B8%AD%E5%85%B1.md#1">天灭中共</a>”的避邪符；右图：台湾大选前夕，民众驱逐中共操控的红色媒体。</p>
+<p>提起香港，很多人马上会想到2019年的“反送中”运动。尽管香港每天有近10万的大陆人入境，而且港府一直不全面封关，香港人却因为坚持在“反送中”运动中高举“<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%A4%A9%E7%81%AD%E4%B8%AD%E5%85%B1.md#1">天灭中共</a>”的辟邪符而得到平安。截止3月18日，香港确诊的100多例中共病毒感染者中，大多是从大陆来的人，香港本地人中多是倾向支持中共的人士被感染。</p>
 <p>而一提起台湾，人们可能马上会想到2020年1月刚结束不久的台湾大选。台湾人民用选票向中共说不，彻底拒绝了中共。虽然与大陆经贸往来异常紧密，但台湾的确诊人数一直相对较低，使得台湾一举成为全世界抗击瘟疫的典范。</p>
 <p>印度是一个走民主路线的国家，与霸权主义的中共长期处于对峙状态。虽然是中国的近邻，且人口数量仅次于中国，但印度的确诊人数一直相对较低。</p>
 <p>俄罗斯表面是中共的“老大哥”，实际上是最不相信中共的，因此在1月20日中共党魁表态要控制疫情时，俄罗斯第二天就把武汉疫情定性为“生物威胁”。尽管中共党魁称俄罗斯总统是他“最好的知心朋友”，但俄罗斯对于中共肺炎疫情仍然采取了最严厉的措施。</p>
@@ -45,36 +45,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/7/n11923562.md#1">【最新疫情3.8】全球疫情数据统计更新</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/9/n11926297.md#1">八大道华人被砍 警方否认与中共肺炎病毒有关</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/10/n11928415.md#1">【最新疫情3.10】川普政府拟免薪酬税</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/10/n11931046.md#1">【最新疫情3.11】世卫宣布疫情为大流行</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/7/n11923562.md#1">【最新疫情3.8】全球疫情数据统计更新</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/9/n11926297.md#1">八大道华人被砍 警方否认与中共肺炎病毒有关</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/10/n11928415.md#1">【最新疫情3.10】川普政府拟免薪酬税</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/10/n11931046.md#1">【最新疫情3.11】世卫宣布疫情为大流行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/10/n2962557.md#1" target="_blank">鲜为人知的马克思之二：自大的马克思</a></li><li><a href="https://github.com/qpntud264/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/19/n11396317.md#1" target="_blank">国防论坛基金会总裁：法轮功在反迫害最前线</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498401.md#1" target="_blank">孙盛起：撒旦横行，圣婴只能死去</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11949968.md#1">【一线采访】收入见底 武汉人生活陷绝境</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qpntud264/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qpntud264/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/20/n11957796.htm">李正宽：肺炎病毒的传播路线揭示：天灭中共</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/20/n11957796.htm">李正宽：肺炎病毒的传播路线揭示：天灭中共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qpntud264/djy/blob/master/gb/20/3/20/n11957796.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qpntud264/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qpntud264/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qpntud264/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/20/3/20/n11957796.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
